# PersonalChefAgent

./: README.md  main.py  pyproject.toml
app/agent/: engine.py
app/api/: app.py  schemas.py
app/core/: config.py
app/model/: gemini.py  groq.py
app/tools/: web_search.py
